# adotau

./: README.md  angular.json  package-lock.json  package.json  relatorio_atividades.md
adotau_api/: .gitignore  adotau.db  pyproject.toml
adotau_api/adotau_api/: main.py
adotau_api/adotau_api/api/v1/: animal_routes.py  routes.py  user_routes.py
adotau_api/adotau_api/core/: auth.py
adotau_api/adotau_api/db/: database_config.py
adotau_api/adotau_api/models/: animal.py  user.py
adotau_api/adotau_api/schemas/: animal.py  user.py
adotau_api/adotau_api/services/: animal_service.py  user_service.py
environments/: environments.ts
src/: index.html
src/app/: app.component.spec.ts  app.component.ts
src/app/animals/animal-card/: animal-card.component.html  animal-card.component.scss  animal-card.component.ts
src/app/animals/animal-form/: animal-form.component.html  animal-form.component.scss  animal-form.component.spec.ts  animal-form.component.ts
src/app/animals/animal-list/: animal-list.component.html  animal-list.component.scss  animal-list.component.spec.ts  animal-list.component.ts
src/app/animals/animal-user-card/: animal-user-card.component.html  animal-user-card.component.scss  animal-user-card.component.ts
src/app/animals/models/: animal.model.ts
src/app/animals/services/: abstract-animal.service.ts  animal.provider.service.ts  (+2 more)
src/app/config/: app.config.ts
src/app/models/: operation-result.model.ts
src/app/routes/: app.routes.ts
src/app/users/: abstract-user.service.ts  mock-user.service.ts  user.provider.service.ts  user.service.ts
(+73 files in other folders)
